# Midi-Chord-Transformer

./: README.md
_workspace_midi_chord_transformer/: .gitignore  CMakeLists.txt  README.md  setup.sh  ~$README.md
_workspace_midi_chord_transformer/include/core/: action_manager.h  chord_progression_analyzer.h  chord_substitution.h  chord_synthesizer.h  key_detector.h  midi_processor.h  midi_structures.h  voice_leading_engine.h
_workspace_midi_chord_transformer/include/gui/: midi_chord_transformer_app.h
_workspace_midi_chord_transformer/include/utils/: midi_utils.h
_workspace_midi_chord_transformer/src/: main.cpp
_workspace_midi_chord_transformer/src/core/: action_manager.cpp  chord_progression_analyzer.cpp  chord_substitution.cpp  chord_synthesizer.cpp  key_detector.cpp  midi_processor.cpp  voice_leading_engine.cpp
_workspace_midi_chord_transformer/src/gui/: midi_chord_transformer_app.cpp
_workspace_midi_chord_transformer/src/utils/: midi_utils.cpp
